Changed event for send request on 'change' and changed placeholder color. The bugs with dynamic position deteteTask and nowrap text has been fixed. Also added count of tasks.

--- a/ToDoSite.WebUI/Content/Site.css
+++ b/ToDoSite.WebUI/Content/Site.css
@@ -52,6 +52,10 @@ body {
     font-size: 25px;
 }
 
+::placeholder {
+    color: #c1c1c1;
+}
+
 
 #toDoInput:focus {
     outline: none;
@@ -63,9 +67,10 @@ body {
 
 .taskName {
     padding: 15px 10px 15px 0;
-    width: calc(92% - 40px);
+    width: calc(100% - 55px - 41px);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
+    overflow-wrap: break-word;
 }
 
 .itemTask {
@@ -93,7 +98,7 @@ body {
 }
 
 .completeCheckBlock {
-    width: 45px;
+    width: 55px;
     height: 26px;
     display: flex;
     justify-content: center;
@@ -179,19 +184,17 @@ label.completeCheckLabel::before, .completeCheck {
     background-color: #e9ecef;
 }
 
-
-.overlay {
-    width: 70vw;
-    height: 49px;
-    background-color: red;
-    position: absolute;
-    opacity: 0;
+.navBlock {
+    /* width: 100%; */
+    height: 40px;
+    display: flex;
+    align-items: center;
+    padding: 0 12px;
 }
 
-.overlay:hover {
-    opacity: 1;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    right: 0;
+.countOfTasksContainer {
+    display: flex;
+    color: #777;
+    white-space: pre;
+    font-family: Arial, Helvetica, sans-serif;
 }
